SIMO REQUIREMENTS UPDATE
Problema grafico zone vietate
Mostrare zone vietate nella home senza pero l'assegnazione

--- a/components/anchors-table.html
+++ b/components/anchors-table.html
@@ -142,7 +142,7 @@
             </div>
         </md-input-container>
 
-        <md-table-pagination class="color-red" md-limit="query.limit" md-limit-options="query.limitOptions"
+        <md-table-pagination class="color-red background-white position-fixed bottom-0" md-limit="query.limit" md-limit-options="query.limitOptions"
                              md-page="query.page"
                              md-total="{{anchors.length}}" md-on-paginate="getAnchors">
         </md-table-pagination>
