--- a/components/floor-settings.html
+++ b/components/floor-settings.html
@@ -74,7 +74,7 @@
             </div>
         </md-input-container>
 
-        <md-table-pagination class="color-red" md-limit="query.limit" md-limit-options="query.limitOptions"
+        <md-table-pagination class="color-red background-white position-fixed bottom-0" md-limit="query.limit" md-limit-options="query.limitOptions"
                              md-page="query.page"
                              md-total="{{floors.length}}" md-on-paginate="getFloorsfloor()">
         </md-table-pagination>
