--- a/components/history-table.html
+++ b/components/history-table.html
@@ -69,8 +69,8 @@
                 <md-button ng-click="deleteHistory()" class="md-raised background-red color-white margin-auto margin-top-20-px">{{lang.deleteHistory}}</md-button>
             </div>
         </div>
-        <div layout="column">
-            <md-table-container>
+        <div layout="column" layout-align="center center">
+            <md-table-container class="margin-bottom-40-px">
 
                 <table md-table>
 
@@ -123,7 +123,7 @@
                     </tbody>
                 </table>
             </md-table-container>
-            <md-table-pagination class="color-red" md-limit="query.limit" md-limit-options="query.limitOptions"
+            <md-table-pagination class="color-red background-white position-fixed bottom-0" md-limit="query.limit" md-limit-options="query.limitOptions"
                                  md-page="query.page"
                                  md-total="{{historyRows.length}}" md-on-paginate="">
             </md-table-pagination>
