--- a/components/indoor-alarms-info.html
+++ b/components/indoor-alarms-info.html
@@ -26,7 +26,7 @@
 <md-content class="popup-padding">
     <div layout="column" layout-align="center center" ng-controller="languageController">
 
-        <md-table-container>
+        <md-table-container class="margin-bottom-40-px">
 
             <table md-table md-row-select="options.rowSelection" ng-model="selected"
                    md-progress="promise">
@@ -67,7 +67,7 @@
             </table>
         </md-table-container>
 
-        <md-table-pagination class="color-red" md-limit="query.limit" md-limit-options="query.limitOptions"
+        <md-table-pagination class="color-red background-white position-fixed bottom-0" md-limit="query.limit" md-limit-options="query.limitOptions"
                              md-page="query.page"
                              md-total="{{alarms.length}}" md-on-paginate="">
         </md-table-pagination>
