--- a/components/tags-table.html
+++ b/components/tags-table.html
@@ -67,7 +67,7 @@
                             {{lang.macsManaging | uppercase}}
                         </md-button>
                     </td>
-                    <td md-cell ng-show="(isAdmin || isUserManager) && !isHome">
+                    <td md-cell ng-show="(isAdmin || isUserManager)">
                         <md-button ng-click="tagZones(tag)" class="md-raised background-darkcyan color-white">
                             {{lang.zonesManaging | uppercase}}
                         </md-button>
@@ -82,14 +82,14 @@
             </table>
         </md-table-container>
 
-        <md-input-container ng-show="isAdmin || isUserManager" md-no-float class="md-block width-100 margin-bottom-0">
+        <md-input-container ng-show="isAdmin || isUserManager" md-no-float class="md-block width-100 margin-top-bottom-25-px">
             <div layout="row" layout-align="center end" class="margin-bottom-30-px">
                 <img src="img/icons/add_row_32.png" class="outline-none cursor-pointer"
                      ng-click="addNewRow()" alt="{{lang.addTag}}" title="{{lang.addTag}}">
             </div>
         </md-input-container>
 
-        <md-table-pagination class="color-red" md-limit="query.limit" md-limit-options="query.limitOptions"
+        <md-table-pagination class="color-red background-white position-fixed bottom-0" md-limit="query.limit" md-limit-options="query.limitOptions"
                              md-page="query.page"
                              md-total="{{tags.length}}" md-on-paginate="">
         </md-table-pagination>
