--- a/components/users-table.html
+++ b/components/users-table.html
@@ -73,14 +73,14 @@
             </table>
         </md-table-container>
 
-        <md-input-container ng-show="isAdmin || isUserManager" md-no-float class="md-block width-100 margin-bottom-0">
+        <md-input-container ng-show="isAdmin || isUserManager" md-no-float class="md-block width-100 margin-top-bottom-25-px">
             <div layout="row" layout-align="center end" class="margin-bottom-30-px">
                 <img src="img/icons/add_row_32.png" class="outline-none cursor-pointer"
                      ng-click="addNewRow()" alt="Aggiungi sito" title="Aggiungi sito">
             </div>
         </md-input-container>
 
-        <md-table-pagination class="color-red" md-limit="query.limit" md-limit-options="query.limitOptions"
+        <md-table-pagination class="color-red background-white position-fixed bottom-0" md-limit="query.limit" md-limit-options="query.limitOptions"
                              md-page="query.page"
                              md-total="{{usersTable.length}}" md-on-paginate="">
         </md-table-pagination>
