--- a/css/custom.css
+++ b/css/custom.css
@@ -41,6 +41,10 @@ DIMENSIONS
     width: 300px;
 }
 
+.width-500-px{
+    width: 500px!important;
+}
+
 .parent-size{
     width: 100%;
     height: 100%;
@@ -227,6 +231,10 @@ MARGINS
 
 .margin-bottom-30-px{
     margin-bottom: 30px;
+}
+
+.margin-bottom-40-px{
+    margin-bottom: 40px!important;
 }
 
 .margin-right-50-px{
@@ -450,8 +458,13 @@ OTHER
     height: 500px;
 }
 
+.position-fixed{
+    position: fixed!important;
+}
 
-
+.bottom-0{
+    bottom: 0!important;
+}
 
 
 
