--- a/components/manage-locations.html
+++ b/components/manage-locations.html
@@ -21,7 +21,7 @@
 </div>
 <!--popup content-->
 
-<md-content class="popup-padding">
+<md-content class="popup-padding width-300-px">
 
     <div layout="column" layout-align="center center">
 
