REFACTORED LOGIN AND CHANGE DEFAULT PASSWORD

--- a/components/change-password.html
+++ b/components/change-password.html
@@ -46,20 +46,18 @@
 
                 <md-input-container md-no-float class="md-block width-100 margin-bottom-0">
                     <input required type="password" ng-model="changePassword.reNewPassword" name="reNewPassword"
-                           placeholder="{{lang.reinsertNewPassword}}">
+                           ng-keyup="$event.keyCode == 13 && sendPassword(changePasswordForm)" placeholder="{{lang.reinsertNewPassword}}">
                     <div ng-messages="changePasswordForm.reNewPassword.$error || changePasswordForm.$submitted"
                          role="alert">
                         <div ng-message=" required">{{lang.reinsertNewPassword}}</div>
                     </div>
                 </md-input-container>
 
-                <div class="background-transparent-white text-center color-green font-medium margint-top-5-px margin-bottom-10-px padding-10-px"
-                     ng-show="changePassword.showSuccess">
+                <div ng-class="{fadeIn: changePassword.showSuccess}" class="display-none background-transparent-white text-center color-green font-medium margint-top-5-px margin-bottom-10-px padding-10-px">
                     {{changePassword.message}}
                 </div>
 
-                <div class="background-transparent-white text-center color-red font-medium margint-top-5-px margin-bottom-10-px padding-10-px"
-                     ng-show="changePassword.showError">
+                <div ng-class="{fadeIn: changePassword.showError}" class="display-none background-transparent-white text-center color-red font-medium margint-top-5-px margin-bottom-10-px padding-10-px">
                     {{changePassword.message}}
                 </div>
 
