--- a/css/custom.css
+++ b/css/custom.css
@@ -472,7 +472,38 @@ OTHER
     bottom: 0!important;
 }
 
+.error-color{
+    -moz-transition: all .2s ease-in!important;
+    -o-transition: all .2s ease-in!important;
+    -webkit-transition: all .2s ease-in!important;
+    transition: all .2s ease-in!important;
+    background: #E13044!important;
+}
 
+.success-color{
+    -moz-transition: all .2s ease-in!important;
+    -o-transition: all .2s ease-in!important;
+    -webkit-transition: all .2s ease-in!important;
+    transition: all .2s ease-in!important;
+    background: #4BAE5A!important;
+}
+
+.fadeIn{
+    display: block!important;
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 2s; /* Firefox < 16 */
+    -o-animation: fadein 2s; /* Opera < 12.1 */
+    animation: fadein 2s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+.display-none{
+    display: none;
+}
 
 
 
