--- a/components/indoor_offline_tags_info.html
+++ b/components/indoor_offline_tags_info.html
@@ -59,7 +59,7 @@
                     <img src="img/icons/tags/offline_tag_24.png" class="md-avatar" alt="{{lang.lostTags}}"
                          title="{{lang.lostTags}}">
                     <div class="md-list-item-text" layout="column">
-                        <h3>{{lang.lostTags}}: <b class="color-orange">{{tagsStateIndoor.offgrid}}</b></h3>
+                        <h3>{{lang.lostTags}}: <b class="color-orange">{{tagsStateIndoor.offGrid}}</b></h3>
                         <h4>{{ tagsStateIndoor.offgrid }} {{lang.areLostTags | lowercase}}</h4>
                         <md-select ng-if="offgridTags.length > 0" ng-model="antani" placeholder="{{lang.lostTags}}">
                             <md-option ng-value="tag" ng-disabled="$index + 1" ng-repeat="tag in offgridTags">
